# mog

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TRADEMARKS.md  jest.preset.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
compute/api/: Cargo.toml
compute/api/src/: address.rs  bridge_service.rs  dispatch.rs  error.rs  lib.rs  sdk_value.rs  sheet.rs  types.rs  workbook.rs
compute/api/src/pure/: cf.rs  chart.rs  format.rs  mod.rs  pivot.rs  pivot_convert.rs  schema.rs  solver.rs  table.rs
compute/api/src/sheet/: bindings.rs  charts.rs  comments.rs  conditional.rs  filters.rs  formats.rs  hyperlinks.rs  layout.rs  objects.rs  outline.rs  pivots.rs  print.rs  protection.rs  slicers.rs  sparklines.rs  structure.rs  tables.rs  validation.rs
compute/api/src/workbook/: history.rs  names.rs  protection.rs  scenarios.rs  settings.rs  sheets.rs  styles.rs
compute/api/tests/: coverage_audit.rs  delete_columns_ref_error.rs  principal_state.rs  security_e2e.rs  smoke.rs
compute/api/tests/security_e2e/: adversarial_bypass_runtime.rs  adversarial_core.rs  adversarial_disposition.rs  bootstrap.rs  composition.rs  (+5 more)
compute/chart-render-wasm/: Cargo.toml  build.sh
compute/chart-render-wasm/npm/: .gitignore  package.json
compute/chart-render-wasm/src/: lib.rs
compute/core/: Cargo.toml  README.md
compute/core/benches/: eval_bench.rs  parser_bench.rs  range_baseline_bench.rs
compute/core/fonts/: LICENSE.md
compute/core/src/: border_patch.rs  bridge_pure.rs  bridge_types.rs  data_table.rs  formula_text.rs  journal.rs  lib.rs  projection.rs  range_manager.rs  time_compat.rs  xlsx_profile.rs
compute/core/tests/: at_operator_and_auto_spill.rs  auto_fill.rs  auto_fill_formula_regression.rs  auto_fill_integration.rs  bench_countifs.rs  bench_deep_chain.rs  byrow_bycol_nested_array.rs  cache_benchmark.rs  cell_value_round_trip_via_engine.rs  cf_canonical_schema.rs  cf_viewport_patches.rs  collab_structural_formula_sync.rs  corpus_full_recalc_pinned.rs  countif_array_criteria.rs  countifs_formula_range.rs  cross_sheet_source_of_truth.rs  cross_sheet_tests.rs  cse_batch_partial_write_rejection.rs  cse_viewport_has_formula_flag.rs  cycle_text_iteration.rs  data_table_active_cell_metadata.rs  data_table_creation_contract.rs  data_table_hydration_keeps_body_formulas.rs  data_table_lifecycle_regression.rs  data_table_partial_write_rejection.rs  data_table_region_membership.rs  data_table_sensitivity.rs  data_table_transient_contract.rs  data_validation_passed_event.rs  dimension_parity.rs  engine_bug_reducers.rs  engine_root_module_shape.rs  error_messages_demo.rs  filter_empty_corner.rs  filter_unique_column_range_blank_tail.rs  filter_viewport_patches.rs  formula_accuracy_ifs_and.rs  formula_accuracy_match_index.rs  formula_accuracy_misc.rs  formula_accuracy_null_mismatch.rs  (+87 more)
compute/napi/: .gitignore  Cargo.toml  README.md  package.json  smoke-test.mjs
compute/napi/scripts/: sync-host-native-artifact.mjs
compute/napi/src/: chart_render.rs  coordinator.rs  lib.rs
compute/pyo3/: Cargo.toml  README.md  pyproject.toml
compute/pyo3/scripts/: check_python_sdk.sh  generate_python_surface.py
compute/pyo3/src/: lib.rs
compute/pyo3/tests/: test_native_package_contract.py  test_security.py  test_security_session.py  test_source_import_smoke.py
compute/wasm/: Cargo.toml  build.sh
compute/wasm/.cargo/: config.toml
compute/wasm/npm/: .gitignore  package.json
compute/wasm/src/: lib.rs
domain-types/: Cargo.toml
domain-types/src/: cell_format.rs  diagnostics.rs  format.rs  lib.rs  metadata.rs  package_policy.rs  parse_output.rs  properties.rs  round_trip.rs  round_trip_field_inventory.md  style_resolver.rs  theme_color.rs  units.rs
domain-types/src/domain/: README.md  analytics.rs  cell_style.rs  comment.rs  conditional_format.rs  connections.rs  copy.rs  custom_table_style.rs  data_features.rs  differential_format.rs  external_link.rs  filter.rs  floating_object.rs  formatting.rs  grouping.rs  hyperlink.rs  merge.rs  mod.rs  named_range.rs  outline.rs  print.rs  protection.rs  sheet.rs  slicer.rs  smartart.rs  sparkline.rs  table.rs  text_effects.rs  theme.rs  validation.rs  workbook.rs
domain-types/src/style_resolver/: cache.rs  color.rs  components.rs  input.rs  mod.rs  number_format.rs  xf.rs
domain-types/src/yrs_schema/: README.md  auto_filter.rs  cell_format.rs  cell_properties.rs  column_schema.rs  comment.rs  conditional_format.rs  doc_properties.rs  file_sharing.rs  file_version.rs  filter_sort_state.rs  floating_object.rs  frozen_panes.rs  helpers.rs  hyperlink.rs  merge.rs  mod.rs  named_range.rs  page_breaks.rs  pivot_cache_records.rs  print.rs  protection.rs  sheet_properties.rs  sheet_view.rs  slicer.rs  sort_state.rs  sparkline.rs  table.rs  tests.rs  validation.rs  web_publishing.rs  workbook_properties.rs
domain-types/tests/: floating_object_public_surface.rs  sheet_view.rs
file-io/csv-parser/: Cargo.toml
file-io/csv-parser/src/: dialect.rs  encoding.rs  infer.rs  lib.rs  options.rs  parse_output_assembly.rs  types.rs
file-io/csv-parser/tests/: fixtures.rs
file-io/ooxml/types/: Cargo.toml
file-io/pdf/core/: Cargo.toml
file-io/xlsx-api/: Cargo.toml
file-io/xlsx-api/src/: bridge.rs  error.rs  export.rs  lazy.rs  lib.rs  mmap.rs  options.rs  parallel.rs  parse.rs  streaming.rs  types.rs  zip.rs
file-io/xlsx-api/tests/: integration_tests.rs
file-io/xlsx/parser/: Cargo.toml  README.md  package.json
file-io/xlsx/test-contracts/: Cargo.toml  README.md
infra/platform/workflow/: README.md  pyproject.toml
infra/rust-bridge/bridge-core/: Cargo.toml
infra/rust-bridge/bridge-delegate/: Cargo.toml
infra/rust-bridge/bridge-derive/: Cargo.toml
infra/rust-bridge/bridge-describe/: Cargo.toml
infra/rust-bridge/bridge-napi/: Cargo.toml
infra/rust-bridge/bridge-pyo3/: Cargo.toml
infra/rust-bridge/bridge-tauri/: Cargo.toml
infra/rust-bridge/bridge-ts/: Cargo.toml  package.json  tsconfig.json
infra/rust-bridge/bridge-types/: Cargo.toml
(+13148 files in other folders)
