[package]
name = "compute-chart-render-wasm"
version = "0.1.0"
publish = false
edition.workspace = true
authors = ["Mog Contributors"]
license.workspace = true
repository.workspace = true
description = "WASM binding layer for Mog chart mark rasterization"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
compute-chart-render = { path = "../core/crates/compute-chart-render" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
