[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mog-sdk"
version = "0.6.0"
description = "Mog spreadsheet engine — Python SDK"
requires-python = ">=3.9"
license = { text = "LicenseRef-Mog-MIT" }

[tool.maturin]
python-source = "python"
module-name = "mog._native"
features = ["extension-module"]
