[package]
name = "ooxml-types"
version = "0.1.0"
publish = false
edition.workspace = true
description = "Curated shared OOXML vocabulary types and typed preservation helpers."

[dependencies]
serde = { version = "1", features = ["derive"] }
xml-derive = { path = "../../xlsx/parser/xml-derive" }

[dev-dependencies]
serde_json = "1"

# Keep the "serde" feature as a no-op so that downstream crates with
# `features = ["serde"]` continue to compile without changes.
[features]
default = []
serde = []
