[package]
name = "xlsx-test-contracts"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared XLSX file I/O test contracts and report schemas"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
