[package]
name = "bridge-core"
version = "0.1.0"
publish = false
edition.workspace = true
description = "Proc macro crate for rust-bridge: #[bridge::api], #[bridge::service]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
