[package]
name = "bridge-derive"
version = "0.1.0"
publish = false
edition.workspace = true
description = "Derive macros for rust-bridge traits (BridgeError, BridgeStructuredError)"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
