[package]
name = "bridge-describe"
version = "0.1.0"
publish = false
edition.workspace = true
description = "Derive macro for DescribeSchema: generates required field metadata for bridge input validation"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
