[package]
name = "bridge-pyo3"
version = "0.1.0"
publish = false
edition.workspace = true
description = "PyO3 generator for rust-bridge: generate_class!() -> #[pyclass] / #[pymethods]"

[dependencies]
bridge-pyo3-macros = { path = "macros" }
bridge-types = { path = "../bridge-types" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
