[package]
name = "bridge-ts"
version = "0.1.0"
publish = false
edition.workspace = true
description = "TypeScript client generator for rust-bridge"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
compute-formats = { path = "../../../compute/core/crates/compute-formats" }
serde_json = "1"
