[package]
name = "compute-chart-render"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless chart mark rasterizer for Node SDK chart image export"

[dependencies]
compute-text-measurement = { path = "../compute-text-measurement" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
png = "0.17"
rustybuzz = "0.20"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny-skia = "0.11"
ttf-parser = "0.25"
